--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,17 @@
     "lint": "vue-cli-service lint",
     "test": "vitest"
   },
-  "dependencies": {    
+  "dependencies": {
     "axios": "^1.6.0",
     "core-js": "^3.18.1",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@testing-library/vue": "^7.0.0",
+    "@vitejs/plugin-vue": "^4.2.3",
     "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/cli-plugin-eslint": "^5.0.8",
-    "@vitejs/plugin-vue": "^4.2.3",
     "@vue/cli-service": "^5.0.8",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
