--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "bootstrap": "^5.3.5",
     "core-js": "^3.18.1",
     "vue": "^3.0.0",
     "vue-router": "^4.5.0"
