--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^7.18.0",
     "happy-dom": "^9.20.3",
+    "msw": "^2.7.5",
     "vitest": "^0.31.1",
     "vue-template-compiler": "^2.6.14"
   },
