--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@testing-library/vue": "^7.0.0",
+    "@types/node": "^22.14.1",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/cli-plugin-eslint": "^5.0.8",
@@ -28,7 +29,9 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^7.18.0",
     "happy-dom": "^9.20.3",
-    "msw": "^2.7.5",
+    "msw": "^1.3.3",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.8.3",
     "vitest": "^0.31.1",
     "vue-template-compiler": "^2.6.14"
   },
@@ -54,5 +57,8 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "msw": {
+    "workerDirectory": "public"
+  }
 }
