filter by resident id

--- a/template.yaml
+++ b/template.yaml
@@ -52,6 +52,10 @@ Resources:
             Method: GET
             RestApiId:
               Ref: ApiGatewayApi
+            RequestParameters:
+              - method.request.querystring.residentId:
+                  Required: false
+
   # Each Lambda function is defined by properties:
   # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
 
@@ -87,6 +91,7 @@ Resources:
             Method: GET
             RestApiId:
               Ref: ApiGatewayApi
+
   # Each Lambda function is defined by properties:
   # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
 
