--- a/template.yaml
+++ b/template.yaml
@@ -48,7 +48,7 @@ Resources:
         Api:
           Type: Api
           Properties:
-            Path: /
+            Path: /visitors
             Method: GET
             RestApiId:
               Ref: ApiGatewayApi
