--- a/template.yaml
+++ b/template.yaml
@@ -21,11 +21,11 @@ Resources:
         AllowOrigin: "'*'" #DO NOT USE THIS VALUE IN PRODUCTION - https://docs.aws.amazon.com/apigateway/latest/developerguide/http-api-cors.html
 
   # This is a Lambda function config associated with the source code: get-by-id.js
-  getAllItemsFunction:
+  getUserItemsFunction:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: backend/
-      Handler: src/handlers/get-all-items.getAllItemsHandler
+      Handler: src/handlers/get-user-items.getUserItemsHandler
       Runtime: nodejs20.x
       Architectures:
         - x86_64
