Cors policy PUT

--- a/template.yaml
+++ b/template.yaml
@@ -16,7 +16,7 @@ Resources:
     Properties:
       StageName: Prod
       Cors:
-        AllowMethods: "'OPTIONS, POST, GET'"
+        AllowMethods: "'OPTIONS, POST, GET, PUT'"
         AllowHeaders: "'Content-Type'"
         AllowOrigin: "'*'" #DO NOT USE THIS VALUE IN PRODUCTION - https://docs.aws.amazon.com/apigateway/latest/developerguide/http-api-cors.html
 
