--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
     "dependencies": {
         "@aws-sdk/client-dynamodb": "^3.398.0",
         "@aws-sdk/lib-dynamodb": "^3.398.0",
-        "qrcode": "^1.5.4"
+        "qrcode": "^1.5.4",
+        "uuid": "^11.1.0"
     },
     "devDependencies": {
         "aws-sdk-client-mock": "^2.0.0",
