--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-vue": "^7.18.0",
     "happy-dom": "^9.20.3",
     "msw": "^1.3.3",
+    "prettier": "^3.5.3",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.3",
     "vitest": "^0.31.1",
