--- a/template.yaml
+++ b/template.yaml
@@ -92,6 +92,39 @@ Resources:
             RestApiId:
               Ref: ApiGatewayApi
 
+  # This is a Lambda function config associated with the source code: get-invite-by-token.mjs
+  getInviteByTokenFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: backend/
+      Handler: src/handlers/get-invite-by-token.getInviteByTokenHandler
+      Runtime: nodejs20.x
+      Architectures:
+        - x86_64
+      MemorySize: 128
+      Timeout: 100
+      Description:
+        A simple example includes a HTTP get method to get one item by
+        id from a DynamoDB table.
+      Policies:
+        # Give Create/Read/Update/Delete Permissions to the VisitorsTable
+        - DynamoDBCrudPolicy:
+            TableName: !Ref InviteLinksTable
+      Environment:
+        Variables:
+          # Make table name accessible as environment variable from function code during execution
+          INVITE_LINKS_TABLE: !Ref InviteLinksTable
+          # Make DynamoDB endpoint accessible as environment variable from function code during execution
+          ENDPOINT_OVERRIDE: ''
+      Events:
+        Api:
+          Type: Api
+          Properties:
+            Path: /invite/{inviteToken}
+            Method: GET
+            RestApiId:
+              Ref: ApiGatewayApi
+
   # Each Lambda function is defined by properties:
   # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
 
@@ -132,7 +165,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: backend/
-      Handler: src/handlers/generate-invite-link.putInviteLinkItemHandler
+      Handler: src/handlers/put-invite-link.putInviteLinkItemHandler
       Runtime: nodejs20.x
       Architectures:
         - x86_64
