--- a/template.yaml
+++ b/template.yaml
@@ -216,8 +216,7 @@ Resources:
           VISITORS_TABLE: !Ref VisitRequestsTable
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
           ENDPOINT_OVERRIDE: ''
-          APP_FRONTEND_BASE_URL: 'https://vms.alphinecodetech.click'
-          INVITE_LINKS_TABLE: !Ref VisitRequestsTable
+          VISIT_REQUESTS_TABLE: !Ref VisitRequestsTable
       Events:
         Api:
           Type: Api
