--- a/template.yaml
+++ b/template.yaml
@@ -56,6 +56,42 @@ Resources:
               - method.request.querystring.residentId:
                   Required: false
 
+  # This is a Lambda function config associated with the source code: get-visit-requests
+  getVisitRequestsFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: backend/
+      Handler: src/handlers/get-visit-requests.getVisitRequestsHandler
+      Runtime: nodejs20.x
+      Architectures:
+        - x86_64
+      MemorySize: 128
+      Timeout: 100
+      Description:
+        A simple example includes a HTTP get method to get all items by
+        id from a DynamoDB table.
+      Policies:
+        # Give Create/Read/Update/Delete Permissions to the VisitorsTable
+        - DynamoDBCrudPolicy:
+            TableName: !Ref VisitorsTable
+      Environment:
+        Variables:
+          # Make table name accessible as environment variable from function code during execution
+          VISITORS_TABLE: !Ref VisitorsTable
+          # Make DynamoDB endpoint accessible as environment variable from function code during execution
+          ENDPOINT_OVERRIDE: ''
+      Events:
+        Api:
+          Type: Api
+          Properties:
+            Path: /visitors
+            Method: GET
+            RestApiId:
+              Ref: ApiGatewayApi
+            RequestParameters:
+              - method.request.querystring.residentId:
+                  Required: false
+
   # Each Lambda function is defined by properties:
   # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
 
@@ -262,10 +298,10 @@ Resources:
     Properties:
       TableName: VisitRequestsTable
       AttributeDefinitions:
-        - AttributeName: registrationId
+        - AttributeName: residentId
           AttributeType: S
       KeySchema:
-        - AttributeName: registrationId
+        - AttributeName: residentId
           KeyType: HASH
       BillingMode: PAY_PER_REQUEST
       TimeToLiveSpecification:
