--- a/template.yaml
+++ b/template.yaml
@@ -73,13 +73,13 @@ Resources:
       Policies:
         # Give Create/Read/Update/Delete Permissions to the VisitorsTable
         - DynamoDBCrudPolicy:
-            TableName: !Ref VisitRequestsTable
+            TableName: !Ref VisitRequestsTableNew
       Environment:
         Variables:
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
           ENDPOINT_OVERRIDE: ''
           # Make table name accessible as environment variable from function code during execution
-          VISIT_REQUESTS_TABLE: !Ref VisitRequestsTable
+          VISIT_REQUESTS_TABLE: !Ref VisitRequestsTableNew
       Events:
         Api:
           Type: Api
@@ -244,7 +244,7 @@ Resources:
         A simple example includes a HTTP post method to add one item to
         a DynamoDB table.
       Policies:
-        # Give Create/Read/Update/Delete Permissions to the VisitRequestsTable
+        # Give Create/Read/Update/Delete Permissions to the VisitRequestsTableNew
         - DynamoDBCrudPolicy:
             TableName: !Ref VisitRequestsTableNew
       Environment:
