--- a/samconfig.toml
+++ b/samconfig.toml
@@ -18,7 +18,7 @@ capabilities = "CAPABILITY_IAM"
 confirm_changeset = false
 resolve_s3 = true
 s3_prefix = "visitor-management"
-region = "us-east-1"
+region = "ap-southeast-1"
 image_repositories = []
 
 [default.package.parameters]
