--- a/template.yaml
+++ b/template.yaml
@@ -392,7 +392,7 @@ Resources:
           - alphinecodetech.click
           - vms.alphinecodetech.click
         ViewerCertificate:
-          AcmCertificateArn: 'arn:aws:acm:ap-southeast-1:121216464768:certificate/1002ad2b-782b-4150-8ec7-17a748deeb56' # Request a new one in ACM when deploying from scratch
+          AcmCertificateArn: 'arn:aws:acm:ap-southeast-1:121216464768:certificate/ba7a511a-0293-420c-b942-414324adc594' # Request a new one in ACM when deploying from scratch
           MinimumProtocolVersion: 'TLSv1.2_2021'
           SslSupportMethod: 'sni-only'
         CustomErrorResponses:
@@ -419,7 +419,7 @@ Resources:
       Name: alphinecodetech.click
       HostedZoneConfig:
         Comment: Hosted zone for my visitor management application
-    DeletionPolicy: Retain
+    # DeletionPolicy: Retain
 
   # Note that CNAMEs are not included here as they were only used for validation needed for public certificate request in ACM. It is a one time setup.
   # Alias record for the vms subdomain domain IPV4
@@ -430,7 +430,7 @@ Resources:
       Name: vms.alphinecodetech.click
       Type: A
       AliasTarget:
-        HostedZoneId: Z2FDTNDATAQYW2 # CloudFront Hosted Zone ID (for US East (N. Virginia), check for your region)
+        HostedZoneId: Z3AQB6HAAAAK8 # CloudFront Hosted Zone ID (ap-southeast-1), check for your region)
         DNSName: !GetAtt CloudFrontDistribution.DomainName # Your CloudFront distribution's domain name
         EvaluateTargetHealth: false # Important for CloudFront
 
