temp removed SslSupportMethod: 'sni-only'

--- a/template.yaml
+++ b/template.yaml
@@ -395,7 +395,7 @@ Resources:
           # AcmCertificateArn: 'arn:aws:acm:us-east-1:121216464768:certificate/d5e28c4a-3c05-431e-a3b6-836800ae0cc9'
           CloudFrontDefaultCertificate: true
           MinimumProtocolVersion: 'TLSv1.2_2021'
-          SslSupportMethod: 'sni-only'
+          # SslSupportMethod: 'sni-only'
         CustomErrorResponses:
           - ErrorCode: 403
             ResponseCode: 200
