fix dates with Luxon

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@aws-sdk/client-dynamodb": "^3.398.0",
         "@aws-sdk/lib-dynamodb": "^3.398.0",
+        "luxon": "^3.6.1",
         "qrcode": "^1.5.4",
         "uuid": "^11.1.0"
     },
