--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.0",
     "bootstrap": "^5.3.5",
     "core-js": "^3.18.1",
+    "oidc-client-ts": "^3.2.0",
     "pinia": "^3.0.2",
     "vue": "^3.0.0",
     "vue-router": "^4.5.0"
