--- a/template.yaml
+++ b/template.yaml
@@ -486,12 +486,26 @@ Resources:
         - email
       # Define custom attributes if needed
       Schema:
+        - Name: address
+          AttributeDataType: String
+          Mutable: true
+          Required: true
+        - Name: phone_number
+          AttributeDataType: String
+          Mutable: true
+          Required: true
+        - Name: email
+          AttributeDataType: String
+          Mutable: true
+          Required: true
         - Name: given_name
           AttributeDataType: String
           Mutable: true
+          Required: true
         - Name: family_name
           AttributeDataType: String
           Mutable: true
+          Required: true
       # Configure message customizations (email verification, password reset)
       # MessageConfigurations:
       #   EmailMessage: "..."
