--- a/template.yaml
+++ b/template.yaml
@@ -478,27 +478,27 @@ Resources:
           RequireNumbers: true
           RequireSymbols: false
           RequireUppercase: true
-      Schema:
-        - Name: address
-          AttributeDataType: String
-          Mutable: true
-          Required: true
-        - Name: phone_number
-          AttributeDataType: String
-          Mutable: true
-          Required: true
-        - Name: email
-          AttributeDataType: String
-          Mutable: true
-          Required: true
-        - Name: given_name
-          AttributeDataType: String
-          Mutable: true
-          Required: true
-        - Name: family_name
-          AttributeDataType: String
-          Mutable: true
-          Required: true
+      # Schema:
+      #   - Name: address
+      #     AttributeDataType: String
+      #     Mutable: true
+      #     Required: true
+      #   - Name: phone_number
+      #     AttributeDataType: String
+      #     Mutable: true
+      #     Required: true
+      #   - Name: email
+      #     AttributeDataType: String
+      #     Mutable: true
+      #     Required: true
+      #   - Name: given_name
+      #     AttributeDataType: String
+      #     Mutable: true
+      #     Required: true
+      #   - Name: family_name
+      #     AttributeDataType: String
+      #     Mutable: true
+      #     Required: true
       # Configure sign-in options (email, phone, username)
       UsernameAttributes:
         - email
